# Notion-Trader

./: .replit  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  crypto_api.py  notion_service.py  pyproject.toml  replit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: main.py
attached_assets/: Pasted-Here-s-the-condensed-Master-Trading-Bot-Dashboard-Gener_1766222018749.txt  Pasted-Master-Prompt-Generate-a-Production-Crypto-Grid-Trading_1766221844202.txt  content-1766232567002.md  content-1766232644070.md
config/: grid_configs.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md
models/: database.py
services/: __init__.py  alert_handler.py  bybit_client.py  data_ingestion.py  grid_engine.py  risk_manager.py
